--- a/Server/.env.example
+++ b/Server/.env.example
@@ -2,7 +2,8 @@ PORT=8080
 NODE_ENV=development
 MONGODB_URI=mongodb://localhost:27017/bluemedix
 JWT_SECRET=your_jwt_secret_key_here
-FRONTEND_URL=http://localhost:3000
+# FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=https://new-blue-medix-git-main-jai03sahs-projects.vercel.app/
 ADMIN_SECRET_KEY=your_admin_secret_key_here# Server Configuration
 PORT=8080
 NODE_ENV=development
