--- a/Server/.env.example
+++ b/Server/.env.example
@@ -9,7 +9,7 @@ PORT=8080
 NODE_ENV=development
 
 # MongoDB Connection
-MONGODB_URI=mongodb://localhost:27017/bluemedix 
+MONGODB_URI=mongodb://localhost:27017/bluemedixNew
 
 # JWT Secret
 JWT_SECRET=your_jwt_secret_key_here 
